# url-shortener

./: LICENSE  README.md  cabal.project  flake.nix  hie.yaml  url-shortener.cabal
.github/workflows/: CI.yaml
app/: Main.hs
postgres/: logfile  person.sql  setup.sh  setup.sql  start.sh  stop.sh
postgres/db/: postgresql.conf  postmaster.opts
postgres/db/base/1/: 1247  1255  1259  14298  14299  14303  14309  14313  2579  2605_vm  2606  2608  2608_vm  2609_vm  2610_vm  2615_vm  2665  2666  2674  2682  2692  2703  2704  3081  3394  3456  3456_fsm  3456_vm  3600_vm  3602  3603_vm  3605  3609  3764  3766
postgres/db/base/14443/: 1249  1259  14294_vm  14304_vm  2602_vm  2610  2612  2612_vm  2616_vm  2617_vm  2619  2662  2664  2678  2679  2681  2693  3079  3079_vm  3080
postgres/db/base/14444/: 1247_vm  1249_vm  1255_vm  1259_vm  14294  14308  2600_vm  2603_vm  2606_vm  2609  2618_vm  2658  2659  2663  2667  2673  2675  2696  2838  2839  2840_vm  3085  3164  3394_vm  3395  3455  3600  3603  3604  3608  3764_vm  pg_internal.init
postgres/db/base/16384/: 1247  1247_vm  1249  1249_vm  1259  1259_vm  14304  14309_vm  16406  16408  16416  16417  2224  2579  2601_vm  2604  2606  2606_vm  2607_vm  2608  2608_vm  2610  2610_vm  2615  2618  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+21 more)
postgres/db/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
postgres/db/pg_stat/: db_0.stat  db_14444.stat  db_16384.stat  global.stat
postgres/db/pg_xact/: 0000
src/: API.hs
src/API/: CreateURL.hs  DeleteURL.hs  Redirect.hs  Types.hs
src/DB/: DB.hs
test/: Spec.hs
