cabal-version:   2.4
name:            url-shortener
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          José María Landa Chávez
maintainer:      José María Landa Chávez <josemaria.landa@gmail.com>
copyright:       2022 José María Landa Chávez
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/url-shortener#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/url-shortener.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: DeriveGeneric,
                      DataKinds,
                      TypeOperators,
                      FlexibleInstances,
                      GeneralizedNewtypeDeriving,
                      MultiParamTypeClasses,
                      OverloadedStrings,
                      RankNTypes,
                      ScopedTypeVariables,
                      TypeApplications,
                      RecordWildCards
  build-depends:
    , containers
    , mtl
    , servant-server
    , text
    , time
    , data-default
    , aeson
    , wai
    , warp
    , attoparsec
    , http-media
    , servant-blaze
    , postgresql-simple
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: API
  other-modules:   API.CreateURL,
                   API.DeleteURL,
                   API.Redirect,
                   API.Types
                   DB.DB

executable url-shortener-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  url-shortener
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite url-shortener-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , url-shortener
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark url-shortener-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , url-shortener

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
